fix rail animation mobile bug

--- a/static/index.css
+++ b/static/index.css
@@ -1,10 +1,7 @@
-body {
-    overflow-x: hidden;
-    width: 100vw;
-}
-
 section {
     min-height: 100vh;
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 section:nth-of-type(odd) {
